# stability_model

./: .env.example  .gitignore  LIMITATIONS.md  METHODOLOGY.md  Makefile  PROJECT_BRIEF.md  README.md  RESEARCH_LOG.md  SETUP.md  config.yaml  pyproject.toml  references.bib  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/: countries.csv
data/output/: W_eigenvalues.npy  centrality_in.parquet  centrality_out.parquet  communities.parquet  composite_scores.parquet  composite_scores_ci.parquet  countries_order.csv  coupling_matrix.npy  eigenvalues.npy  eigenvector_centrality_in.npy  eigenvector_centrality_out.npy  eigenvectors.npy  fiedler_vector.parquet  fsi_sanity_check.parquet  laplacian_eigenvalues.npy  model_metadata.parquet  pagerank.parquet  pagerank_ci.parquet  pca_eigenvalues_ci.npy  raw_coupling_matrix.npy  rotated_loadings.npy  steady_state.parquet  systemic_risk.parquet  validation_episodes.parquet
features/: build_indicators.py  pillar_config.py
ingestion/: __init__.py  api_connectors.py  base.py  bulk_connectors.py  imf_weo.py  linkage_connectors.py  run_all.py  vdem.py  worldbank_wdi.py  worldbank_wgi.py
model/: __init__.py  calibrate.py  cascade.py  coupling.py  dynamics.py  geodata.py  laplacian.py  pca.py  political_blocs.py  run_all.py
paper_draft/: main.tex
paper_draft/tables/: metrics.tex
tests/: conftest.py  test_model.py  test_no_placeholder_values.py
validation/: historical_events.py  run_all.py
