[project]
name = "spectral-instability-model"
version = "0.1.0"
description = "Spectral model of global regime instability using eigenvalue decomposition and network contagion dynamics"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core scientific
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    # Data I/O
    "pyarrow>=15.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    # IMF / World Bank
    "wbgapi>=1.0",
    "imfp>=1.1",
    "sdmx1>=2.14",
    # Reference data
    "pycountry>=24.6",
    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    # Web UI
    "streamlit>=1.31",
    # YAML config
    "pyyaml>=6.0",
    # Factor analysis
    "factor-analyzer>=0.5",
    "faostat>=2.0.1",
    "pyreadr>=0.5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "features", "model", "validation", "app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
